--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ a {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 4%;
-  direction: underline;
+  text-decoration: none;
+  font-weight: normal;
+  font-style: normal;
 }
 h1,
 h2,
@@ -45,26 +47,30 @@ address {
   margin-left: auto;
 }
 /* nav */
-.head-nav {
+.header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
-  /* width: 1158px; */
-  width: 320px;
+  max-width: 320px;
   margin: 0 auto;
   padding: 0 16px;
 }
-.container-nav {
+.container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation {
   display: flex;
   align-items: center;
 }
-.container-nav-nav {
-  display: flex;
-  align-items: center;
+.nav-list {
+  font-style: normal;
+  margin-left: auto;
+  display: none;
 }
-
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -74,8 +80,8 @@ address {
   text-transform: uppercase;
   color: #4d5ae5;
   text-decoration: none;
-  margin-right: 76px;
   transition: color 250ms ease-in-out cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 17px 0;
 }
 .logo:hover {
   color: #404bbf;
@@ -86,75 +92,117 @@ address {
 .logo-studio {
   color: #2e2f42;
 }
-.container-nav-menu {
-  display: flex;
-  gap: 40px;
-}
-.nav {
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-  display: block;
-  color: #2e2f42;
-  text-decoration: none;
-  padding: 24px 0;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav:hover,
-.nav:focus {
-  color: #404bbf;
-}
-.nav-studio {
-  position: relative;
-  color: #404bbf;
-}
-.nav-studio::after {
-  content: "";
-  left: 0;
-  border-radius: 2px;
-  height: 4px;
-  width: 100%;
-  position: absolute;
-  bottom: -1px;
-  background-color: #404bbf;
-}
-.address-info {
-  font-size: 16px;
-  color: #434455;
-  text-decoration: none;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.address-info:hover,
-.address-info:focus {
-  color: #404bbf;
-}
 
 .address {
-  display: flex;
-  gap: 40px;
-  font-style: normal;
-  margin-left: auto;
+  display: none;
+}
+.menu-open-btn {
+  padding: 0;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  width: 24px;
+  height: 24px;
+  line-height: 0;
 }
 
+/* ----------MOB MENU--------- */
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding: 24px 24px 16px 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.mob-nav {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+
+.mob-nav:focus,
+.mob-nav:hover {
+  color: #404bbf;
+}
+
+.mob-nav-item {
+  margin-bottom: 40px;
+}
+
+.mob-address {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-decoration: none;
+}
+.mob-address-li {
+  padding-bottom: 24px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mob-menu-social {
+  gap: 40px;
+  margin-bottom: 40px;
+  margin-top: 48px;
+}
 /* main */
-/* section 1 */
+/* -----HERO----- */
 .title {
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office1.jpg);
+    url(../images/hero-img-mob.jpg);
   background-color: #2e2f42;
   max-width: 1440px;
-  padding: 188px 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  padding: 72px 0;
+  margin: 0 auto;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 2dppx),
+  (min-resolution: 192dpi) {
+  .title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-img-mob-2x.jpg);
+  }
 }
 
 .title-text {
@@ -192,41 +240,26 @@ address {
   background-color: #404bbf;
 }
 
-/* section 2 */
+/* -----section 2----- */
 .icon {
   display: flex;
   display: none;
-  /* align-items: center;
-  justify-content: center;
-  height: 112px;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  width: 264px;
-  margin-bottom: 8px;
-  background: #f4f4fd; */
 }
 .our-advent {
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
-.section-title {
-  visibility: hidden;
-}
 .list-advent {
   display: flex;
-  /* gap: 24px; */
   flex-wrap: wrap;
   gap: 72px;
+  align-items: center;
+  justify-content: center;
 }
-.list-advent-strategy {
-  /* width: calc((100% - 72px) / 4); */
-}
+
 .caption {
-  /* font-weight: 500;
-  font-size: 20px; */
   font-weight: 700;
   font-size: 36px;
-  /* line-height: 1.2; */
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
@@ -236,19 +269,18 @@ address {
 }
 
 .text {
-  /* font-weight: 400; */
-font-weight: 500;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
+/*--------- OUR TEAM ----------*/
+
 .section-our-team {
   background-color: #f4f4fd;
-  /* padding: 120px 0; */
   padding: 96px 0;
-  
 }
 .section-title-team {
   font-weight: 700;
@@ -262,13 +294,11 @@ font-weight: 500;
 }
 .list-team {
   display: flex;
-flex-wrap:wrap;
-gap: 72px;
-  /* gap: 24px; */
+  flex-wrap: wrap;
+  gap: 72px;
 }
 .section-card {
   background-color: #fff;
-  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -319,11 +349,11 @@ gap: 72px;
 .icon-social-link-icon {
   fill: #f4f4fd;
 }
-/* ----PORTFOLIO----- */
-.portfolio {
-  /* padding: 120px 0; */
-  padding: 96px 0;
 
+/*--------PORTFOLIO---------*/
+
+.portfolio {
+  padding: 96px 0;
 }
 .section-title-portfolio {
   font-weight: bold;
@@ -337,14 +367,10 @@ gap: 72px;
 .list-portfolio {
   display: flex;
   flex-wrap: wrap;
-  /* column-gap: 24px;
-  row-gap: 48px; */
   gap: 48px;
-
 }
 
 .list-portfolio-item {
-  /* width: calc((100% - 48px) / 3); */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-portfolio-item:hover {
@@ -390,12 +416,10 @@ gap: 72px;
   color: #2e2f42;
 }
 
-
 /* footer */
 .footer {
   background-color: #2e2f42;
-  padding: 100px 0;
-  
+  padding: 96px 0;
 }
 .logo-footer {
   font-family: "Raleway", sans-serif;
@@ -406,9 +430,10 @@ gap: 72px;
   text-transform: uppercase;
   color: #4d5ae5;
   text-decoration: none;
-  display: inline-block;
-  margin-bottom: 16px;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 16px;
 }
 .logo-studio-footer {
   color: #f4f4fd;
@@ -419,23 +444,24 @@ gap: 72px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  max-width: 264px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .footer-social-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  margin-bottom: 16px;
-}
-.footer-container {
   display: flex;
-  align-items: baseline;
+  gap: 16px;
+  align-items: center;
+  justify-content: center;
+  padding-top: 72px;
 }
-.footer-logo-p {
-  margin-right: 120px;
-}
+
 .social-footer {
   display: flex;
   gap: 16px;
@@ -467,28 +493,33 @@ gap: 72px;
 /* -------EMAIL FOOTER-------- */
 
 .email-footer-div {
-  padding-left: 80px;
-  display: block;
+  padding-top: 72px;
 }
 .footer-form {
   display: flex;
-  gap: 24px;
+  gap: 16px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .footer-form-label {
-  gap: 24px;
+  gap: 16px;
 }
 .input-email-footer {
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  padding-left: 16px;
+  opacity: 0.3;
   color: #ffffff;
+}
+.input-email-footer::placeholder {
+  opacity: 0.6;
 }
 .button-email-footer {
   min-width: 165px;
@@ -513,15 +544,15 @@ gap: 72px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  margin-bottom: 16px;
+  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button-email-footer-svg {
   fill: #fff;
   margin-left: 16px;
-}
-.privacy-link {
-  color: #4d5ae5;
 }
 
 /* --------BACKDROP -------- */
@@ -545,7 +576,7 @@ gap: 72px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 408px;
+  width: 288px;
   min-height: 584px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -664,8 +695,6 @@ gap: 72px;
 
 /* ----checkbox---- */
 
-.modal-check {
-}
 .form-checkbox {
   margin-bottom: 24px;
 }
@@ -716,4 +745,290 @@ gap: 72px;
   margin: 0 auto;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   text-align: center;
+}
+.privacy-link {
+  color: #4d5ae5;
+}
+
+/* -------MEDIA------- */
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .section-our-team .container {
+    max-width: 552px;
+  }
+  .logo {
+    margin-right: 120px;
+  }
+
+  .nav-list {
+    display: flex;
+    gap: 40px;
+  }
+  .nav {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+    display: block;
+    color: #2e2f42;
+    text-decoration: none;
+    padding: 24px 0;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav:hover,
+  .nav:focus {
+    color: #404bbf;
+  }
+  .nav-studio {
+    position: relative;
+    color: #404bbf;
+  }
+  .nav-studio::after {
+    content: "";
+    left: 0;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
+    position: absolute;
+    bottom: -1px;
+    background-color: #404bbf;
+  }
+  .address {
+    display: block;
+  }
+  .address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  .address-info {
+    color: #434455;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .address-info:hover,
+  .address-info:focus {
+    color: #404bbf;
+  }
+
+  .menu-open-btn {
+    display: none;
+  }
+
+  .title {
+    padding: 112px 136px 36px;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-img-tab.jpg);
+  }
+  @media screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    .title {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-img-tab-2x.jpg);
+    }
+  }
+  .button {
+    margin-bottom: 112px;
+  }
+  .list-advent {
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+  .list-advent-strategy {
+    width: calc((100% - 24px) / 2);
+  }
+  .list-team {
+    column-gap: 24px;
+    row-gap: 64px;
+  }
+
+  .section-card {
+    width: calc((100% - 24px) / 2);
+  }
+  .list-portfolio {
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+  .list-portfolio-item {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .footer-container {
+    max-width: 552px;
+  }
+  .footer {
+    justify-content: flex-start;
+  }
+  .footer-div-logo-and-social {
+    display: flex;
+    align-items: baseline;
+  }
+  .text-footer {
+    max-width: 264px;
+  }
+  .footer-social-div {
+    padding-left: 24px;
+  }
+  .logo-footer {
+    justify-content: flex-start;
+  }
+  .footer-social-text {
+    justify-content: flex-start;
+  }
+  .footer-form {
+    justify-content: flex-start;
+  }
+  .footer-email-text {
+    justify-content: flex-start;
+  }
+  .modal {
+    max-width: 408px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+  .section-our-team .container {
+    max-width: 1158px;
+  }
+
+  .logo {
+    margin-right: 76px;
+  }
+  .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+  .address-info {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero-img-dt.jpg);
+    /* max-width: 1440px; */
+    padding: 188px 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  @media screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    .title {
+      background-image: linear-gradient(
+          to bottom,
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero-img-bt-2x.jpg);
+    }
+  }
+  .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    margin-bottom: 8px;
+    background: #f4f4fd;
+  }
+  .list-advent {
+    gap: 24px;
+  }
+  .list-advent-strategy {
+    width: calc((100% - 72px) / 4);
+  }
+  .caption {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+  .text {
+    font-weight: 400;
+  }
+
+  .section-our-team {
+    padding: 120px 0;
+  }
+  .list-team {
+    gap: 24px;
+  }
+  .section-card {
+    width: calc((100% - 72px) / 4);
+  }
+  .portfolio {
+    padding: 120px 0;
+  }
+  .list-portfolio {
+    column-gap: 24px;
+    row-gap: 48px;
+  }
+  .list-portfolio-item {
+    width: calc((100% - 48px) / 3);
+  }
+
+  .footer-container .container {
+    min-width: 1158px;
+  }
+  .footer {
+    display: flex;
+    padding-left: 0;
+  }
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+    margin: 0 auto;
+  }
+  .footer-div-logo-and-social {
+    gap: 120px;
+    padding-top: 0;
+  }
+  .text-footer {
+    width: 264px;
+  }
+  .email-footer-div {
+    padding-left: 80px;
+    padding-top: 0;
+  }
+  .footer-form {
+    display: flex;
+    gap: 24px;
+    flex-wrap: nowrap;
+  }
+  .footer-social-div {
+    padding-top: 0;
+  }
+  .footer-logo-p {
+    padding-top: 0;
+  }
+  .footer-social-text {
+    padding-top: 0;
+    padding-bottom: 16px;
+  }
 }
