--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ address {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 72px 0;
+  padding: 72px 52px;
   margin: 0 auto;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -211,16 +211,16 @@ address {
 }
 
 .title-text {
-  font-weight: bold;
-  font-size: 56px;
+  font-weight: 700;
+  font-size: 36px;
   letter-spacing: 0.02em;
-  line-height: 1.07;
+  line-height: 1.11;
   margin: 0 auto;
   color: #fff;
   max-width: 496px;
-  margin-bottom: 48px;
   text-align: center;
   color: #fff;
+  margin-bottom: 72px;
 }
 /* button */
 .button {
@@ -301,6 +301,7 @@ address {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
+  justify-content: center;
 }
 .section-card {
   background-color: #fff;
@@ -438,7 +439,7 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 .logo-studio-footer {
   color: #f4f4fd;
@@ -464,7 +465,7 @@ address {
   gap: 16px;
   align-items: center;
   justify-content: center;
-  padding-top: 72px;
+  margin-top: 72px;
 }
 
 .social-footer {
@@ -498,7 +499,7 @@ address {
 /* -------EMAIL FOOTER-------- */
 
 .email-footer-div {
-  padding-top: 72px;
+  margin-top: 72px;
 }
 .footer-form {
   display: flex;
@@ -549,7 +550,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #fff;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -664,7 +665,7 @@ address {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
-  padding-left: 38px;
+  margin-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -764,6 +765,12 @@ address {
   .section-our-team .container {
     max-width: 552px;
   }
+  .caption {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+  }
   .logo {
     margin-right: 120px;
   }
@@ -827,7 +834,7 @@ address {
   }
 
   .title {
-    padding: 112px 136px 36px;
+    padding: 112px 0;
     background-image: linear-gradient(
         to bottom,
         rgba(46, 47, 66, 0.7),
@@ -847,9 +854,12 @@ address {
         url(../images/hero-img-tab-2x.jpg);
     }
   }
-  .button {
-    margin-bottom: 112px;
+  .title-text {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
   }
+
   .list-advent {
     column-gap: 24px;
     row-gap: 72px;
@@ -887,12 +897,13 @@ address {
     max-width: 264px;
   }
   .footer-social-div {
-    padding-left: 24px;
+    margin-left: 24px;
   }
   .logo-footer {
     justify-content: flex-start;
   }
   .footer-social-text {
+    margin-top: 0;
     justify-content: flex-start;
   }
   .footer-form {
@@ -909,7 +920,7 @@ address {
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
-    padding: 0 15px;
+    padding: 0 0;
   }
   .section-our-team .container {
     max-width: 1158px;
@@ -934,7 +945,7 @@ address {
       ),
       url(../images/hero-img-dt.jpg);
     max-width: 1440px;
-    padding: 188px 0;
+    padding: 120px 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1003,7 +1014,7 @@ address {
   }
   .footer {
     display: flex;
-    padding-left: 0;
+    /* padding-left: 0; */
   }
   .footer-container {
     display: flex;
@@ -1012,28 +1023,19 @@ address {
   }
   .footer-div-logo-and-social {
     gap: 120px;
-    padding-top: 0;
   }
   .text-footer {
     width: 264px;
   }
   .email-footer-div {
-    padding-left: 80px;
-    padding-top: 0;
+    margin-left: 80px;
   }
   .footer-form {
     display: flex;
     gap: 24px;
     flex-wrap: nowrap;
   }
-  .footer-social-div {
-    padding-top: 0;
-  }
-  .footer-logo-p {
-    padding-top: 0;
-  }
   .footer-social-text {
-    padding-top: 0;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
   }
 }
